--- a/170030_SectionB_BD_WK7_Project1.ipynb
+++ b/170030_SectionB_BD_WK7_Project1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.     Give an example where you can apply the Apriori algorithm.      \n",
+    "Q 1 Give an example where you can apply the Apriori algorithm.      \n",
     "Apriori algorithm is an efficient algorithm that scans the database and helps in reducing the size of the itemsets in the database considerably providing a good performance. Thus, data mining helps consumers and industries better in the decision-making process. Currently there are lot of applications and industry which uses apriori algorithm but one of the most famous is Amazon, Flipkar. There recommendation system works using apriori algorithm.\n",
     "\n",
     "When we visit to these websites crawlers make association rules and based on that recommends us product within a specific range. It helps in providing better customer experience."
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.     2 What happens when we decrease the support level? Why?     \n",
+    "Q 2  What happens when we decrease the support level? Why?     \n",
     "\n",
     "Support level signifies the number of times an item is purchase out of total numbe of transactions. So it tells the demand of any product. \n",
     "If support level is increase from previous support level then it means that demand of an item is increase. \n",
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.    3 What happens when we increase the confidence level? Why?   \n",
+    "Q  3 What happens when we increase the confidence level? Why?   \n",
     "\n",
     "Confidence level signifies the favourable chances of purchasing of Item2 when Item1 is purchased.\n",
     "As the confidence level increases that means the chances of purchasing of item2 due to item1 is increasing. This helps any seller to increase the sale and revenue after finding the association between multiple items."
